...
                  Icon(
                    sceneTypeIcon(sceneType),
                    color: scheme.onSecondaryContainer,
                  ),
                  const SizedBox(width: 8),
                  IconButton(
                    key: ValueKey('scene.tile.$uuid.preview'),
                    icon: Icon(
                      Icons.preview,
                      color: scheme.onSecondaryContainer,
                    ),
                    onPressed: onPreview,
                  ),
...
